AM-2902 Refactor category validation and unit tests
   [AM-2902](https://tools.hmcts.net/jira/browse/AM-2902)

Refactor category validation and unit tests.